For now, move the UN*X pcap_lookupnet() to pcap.c.
Eventually, we want an API to return a list of attributes for a device
(like the options for a pcapng Interface Description Block), and we
could use that in pcap_lookupnet(), so the platform dependencies are
pushed down to the list-of-attributes API.

--- a/Makefile.in
+++ b/Makefile.in
@@ -86,7 +86,7 @@ YACC = @YACC@
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS_SRC@ @NETMAP_SRC@ @RDMA_SRC@
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
-CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c \
+CSRC =	pcap.c gencode.c optimize.c nametoaddr.c \
 	etherent.c savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c version.c
