--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,46 +1,46 @@
-cmake_minimum_required( VERSION 2.8.8 )
+cmake_minimum_required(VERSION 2.8.8)
 
 #
 # Apple doesn't build with an install_name starting with @rpath, and
 # neither do we with autotools; don't do so with CMake, either, and
 # suppress warnings about that.
 #
-if (POLICY CMP0042)
+if(POLICY CMP0042)
     cmake_policy(SET CMP0042 OLD)
 endif()
 
-project( pcap )
+project(pcap)
 #
 # Call the library "wpcap" on Windows, for backwards compatibility.
 #
-if( WIN32 )
-    set( LIBRARY_NAME wpcap )
+if(WIN32)
+    set(LIBRARY_NAME wpcap)
 else()
-    set( LIBRARY_NAME pcap )
+    set(LIBRARY_NAME pcap)
 endif()
 
 ###################################################################
 #   Parameters
 ###################################################################
 
-option (INET6 "Enable IPv6" ON)
-if( MSVC )
-    option (USE_STATIC_RT "Use static Runtime" ON)
-endif( MSVC )
-option (BUILD_SHARED_LIBS "Build shared libraries" ON)
-if( WIN32 )
+option(INET6 "Enable IPv6" ON)
+if(MSVC)
+    option(USE_STATIC_RT "Use static Runtime" ON)
+endif(MSVC)
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+if(WIN32)
     set(PACKET_DLL_DIR "" CACHE PATH "Path to directory with include and lib subdirectories for packet.dll")
-endif( WIN32 )
+endif(WIN32)
 
 #
 # Default to having remote capture support on Windows and, for now, to
 # not having it on UN*X.
 #
-if( WIN32 )
-    option (HAVE_REMOTE "Enable remote capture" ON)
+if(WIN32)
+    option(HAVE_REMOTE "Enable remote capture" ON)
 else()
-    option (HAVE_REMOTE "Enable remote capture" OFF)
-endif( WIN32 )
+    option(HAVE_REMOTE "Enable remote capture" OFF)
+endif(WIN32)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     option(BUILD_WITH_LIBNL "Build with libnl" ON)
@@ -50,7 +50,7 @@ endif()
 # Project settings
 ######################################
 
-add_definitions( -DHAVE_CONFIG_H )
+add_definitions(-DHAVE_CONFIG_H)
 
 include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
@@ -59,17 +59,17 @@ include_directories(
 
 include(CheckFunctionExists)
 
-if( WIN32 )
+if(WIN32)
     #
     # The 'Win32/WpdPack/' directory branch is for an AppVeyor build.
     #
-    if( NOT "${PACKET_DLL_DIR}" STREQUAL "" )
+    if(NOT "${PACKET_DLL_DIR}" STREQUAL "")
         include_directories("${PACKET_DLL_DIR}/Include")
-        if( CMAKE_CL_64 )
+        if(CMAKE_CL_64)
             link_directories("${PACKET_DLL_DIR}/Lib/x64")
-        else( CMAKE_CL_64 )
+        else(CMAKE_CL_64)
             link_directories("${PACKET_DLL_DIR}/Lib")
-        endif( CMAKE_CL_64 )
+        endif(CMAKE_CL_64)
 
 	#
 	# We want to build with packet.dll, either from WinPcap or NPcap.
@@ -80,54 +80,54 @@ if( WIN32 )
 	# Check whether we have the NPcap PacketIsLoopbackAdapter()
 	# function.
 	#
-	check_function_exists( PacketIsLoopbackAdapter HAVE_PACKET_IS_LOOPBACK_ADAPTER )
+	check_function_exists(PacketIsLoopbackAdapter HAVE_PACKET_IS_LOOPBACK_ADAPTER)
     endif()
     include_directories(
         ../Common/
         Win32/Include
         Win32/WpdPack/Include
     )
-endif( WIN32)
+endif(WIN32)
 
-add_definitions( -DBUILDING_PCAP )
+add_definitions(-DBUILDING_PCAP)
 
-if( MSVC )
-    add_definitions( -D__STDC__ )
-    add_definitions( -D_CRT_SECURE_NO_WARNINGS )
-    add_definitions( "-D_U_=" )
-elseif( CMAKE_COMPILER_IS_GNUCXX )
-    add_definitions( "-D_U_=__attribute__((unused))" )
+if(MSVC)
+    add_definitions(-D__STDC__)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    add_definitions("-D_U_=")
+elseif(CMAKE_COMPILER_IS_GNUCXX)
+    add_definitions("-D_U_=__attribute__((unused))")
 else(MSVC)
-    add_definitions( "-D_U_=" )
-endif( MSVC )
+    add_definitions("-D_U_=")
+endif(MSVC)
 
-if( MSVC )
-    if (USE_STATIC_RT)
-        MESSAGE( STATUS "Use STATIC runtime" )
+if(MSVC)
+    if(USE_STATIC_RT)
+        message(STATUS "Use STATIC runtime")
         set(NAME_RT MT)
-        set (CMAKE_CXX_FLAGS_MINSIZEREL     "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
-        set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
-        set (CMAKE_CXX_FLAGS_RELEASE        "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-        set (CMAKE_CXX_FLAGS_DEBUG          "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+        set(CMAKE_CXX_FLAGS_MINSIZEREL     "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
+        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
+        set(CMAKE_CXX_FLAGS_RELEASE        "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+        set(CMAKE_CXX_FLAGS_DEBUG          "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
 
-        set (CMAKE_C_FLAGS_MINSIZEREL       "${CMAKE_C_FLAGS_MINSIZEREL} /MT")
-        set (CMAKE_C_FLAGS_RELWITHDEBINFO   "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT")
-        set (CMAKE_C_FLAGS_RELEASE          "${CMAKE_C_FLAGS_RELEASE} /MT")
-        set (CMAKE_C_FLAGS_DEBUG            "${CMAKE_C_FLAGS_DEBUG} /MTd")
+        set(CMAKE_C_FLAGS_MINSIZEREL       "${CMAKE_C_FLAGS_MINSIZEREL} /MT")
+        set(CMAKE_C_FLAGS_RELWITHDEBINFO   "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT")
+        set(CMAKE_C_FLAGS_RELEASE          "${CMAKE_C_FLAGS_RELEASE} /MT")
+        set(CMAKE_C_FLAGS_DEBUG            "${CMAKE_C_FLAGS_DEBUG} /MTd")
     else (USE_STATIC_RT)
-        MESSAGE( STATUS "Use DYNAMIC runtime" )
+        message(STATUS "Use DYNAMIC runtime")
         set(NAME_RT MD)
-        set (CMAKE_CXX_FLAGS_MINSIZEREL     "${CMAKE_CXX_FLAGS_MINSIZEREL} /MD")
-        set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MD")
-        set (CMAKE_CXX_FLAGS_RELEASE        "${CMAKE_CXX_FLAGS_RELEASE} /MD")
-        set (CMAKE_CXX_FLAGS_DEBUG          "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
+        set(CMAKE_CXX_FLAGS_MINSIZEREL     "${CMAKE_CXX_FLAGS_MINSIZEREL} /MD")
+        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MD")
+        set(CMAKE_CXX_FLAGS_RELEASE        "${CMAKE_CXX_FLAGS_RELEASE} /MD")
+        set(CMAKE_CXX_FLAGS_DEBUG          "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
 
-        set (CMAKE_C_FLAGS_MINSIZEREL       "${CMAKE_C_FLAGS_MINSIZEREL} /MD")
-        set (CMAKE_C_FLAGS_RELWITHDEBINFO   "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MD")
-        set (CMAKE_C_FLAGS_RELEASE          "${CMAKE_C_FLAGS_RELEASE} /MD")
-        set (CMAKE_C_FLAGS_DEBUG            "${CMAKE_C_FLAGS_DEBUG} /MDd")
-   endif (USE_STATIC_RT)
-endif( MSVC )
+        set(CMAKE_C_FLAGS_MINSIZEREL       "${CMAKE_C_FLAGS_MINSIZEREL} /MD")
+        set(CMAKE_C_FLAGS_RELWITHDEBINFO   "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MD")
+        set(CMAKE_C_FLAGS_RELEASE          "${CMAKE_C_FLAGS_RELEASE} /MD")
+        set(CMAKE_C_FLAGS_DEBUG            "${CMAKE_C_FLAGS_DEBUG} /MDd")
+   endif(USE_STATIC_RT)
+endif(MSVC)
 
 ###################################################################
 #   Detect available platform features
@@ -176,12 +176,12 @@ endif()
 #
 # Functions.
 #
-check_function_exists( strerror HAVE_STRERROR )
-check_function_exists( strlcpy HAVE_STRLCPY )
-check_function_exists( strlcat HAVE_STRLCAT )
-check_function_exists( snprintf HAVE_SNPRINTF )
-check_function_exists( vsnprintf HAVE_VSNPRINTF )
-check_function_exists( strtok_r HAVE_STRTOK_R )
+check_function_exists(strerror HAVE_STRERROR)
+check_function_exists(strlcpy HAVE_STRLCPY)
+check_function_exists(strlcat HAVE_STRLCAT)
+check_function_exists(snprintf HAVE_SNPRINTF)
+check_function_exists(vsnprintf HAVE_VSNPRINTF)
+check_function_exists(strtok_r HAVE_STRTOK_R)
 
 #
 # Data types.
@@ -198,15 +198,15 @@ set(CMAKE_EXTRA_INCLUDE_FILES unistd.h)
 #
 # Structure fields.
 #
-check_struct_has_member("struct sockaddr" sa_len sys/socket.h HAVE_SOCKADDR_SA_LEN )
+check_struct_has_member("struct sockaddr" sa_len sys/socket.h HAVE_SOCKADDR_SA_LEN)
 
-if( INET6 )
-    MESSAGE( STATUS "Use IPv6" )
-endif( INET6 )
+if(INET6)
+    message(STATUS "Use IPv6")
+endif(INET6)
 
-if( WIN32 )
-    add_definitions( -DHAVE_ADDRINFO )
-endif( WIN32 )
+if(WIN32)
+    add_definitions(-DHAVE_ADDRINFO)
+endif(WIN32)
 
 ######################################
 # External dependencies
@@ -231,27 +231,27 @@ set(PROJECT_SOURCE_LIST_C
     bpf/net/bpf_filter.c
 )
 
-if( WIN32 )
-    set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/win_snprintf.c )
+if(WIN32)
+    set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/win_snprintf.c)
 else()
-    if( NOT HAVE_SNPRINTF )
-        set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/snprintf.c )
-    endif( NOT HAVE_SNPRINTF )
-    if( NOT HAVE_STRTOK_R )
-        set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/strtok_r.c )
-    endif( NOT HAVE_STRTOK_R )
-endif( WIN32 )
+    if(NOT HAVE_SNPRINTF)
+        set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/snprintf.c)
+    endif(NOT HAVE_SNPRINTF)
+    if(NOT HAVE_STRTOK_R)
+        set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/strtok_r.c)
+    endif(NOT HAVE_STRTOK_R)
+endif(WIN32)
 
-if( HAVE_REMOTE )
+if(HAVE_REMOTE)
     set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C}
         pcap-new.c pcap-rpcap.c sockutils.c)
-endif( HAVE_REMOTE )
+endif(HAVE_REMOTE)
 
 #
 # Determine the main pcap-XXX.c file to use, and the libraries with
 # which we need to link libpcap, if any.
 #
-if( WIN32 )
+if(WIN32)
     #
     # Windows; we need to link with WinSock2.
     #
@@ -260,19 +260,19 @@ if( WIN32 )
     #
     # Check whether we have packet.dll.
     #
-    if (HAVE_PACKET32)
+    if(HAVE_PACKET32)
 	#
 	# We have packet.dll.
 	# Set the capture type to NPF.
 	#
-	set( PCAP_TYPE npf )
+	set(PCAP_TYPE npf)
     else()
 	#
 	# We don't have any capture type we know about, so just use
 	# the null capture type, and only support reading (and writing)
 	# capture files.
 	#
-	set( PCAP_TYPE null )
+	set(PCAP_TYPE null)
     endif()
 else()
     #
@@ -282,46 +282,46 @@ else()
     # what libraries we'd need to link libpcap with, if any.
     #
     set(PCAP_LINK_LIBRARIES "")
-    if( EXISTS /dev/bpf )
+    if(EXISTS /dev/bpf)
 	#
 	# Cloning BPF device.
 	#
-	set( PCAP_TYPE bpf )
+	set(PCAP_TYPE bpf)
 	AC_DEFINE(HAVE_CLONING_BPF,1,[define if you have a cloning BPF device])
-    elseif( EXISTS /dev/bpf0 )
-	set( PCAP_TYPE bpf )
+    elseif(EXISTS /dev/bpf0)
+	set(PCAP_TYPE bpf)
 
         #
         # XXX - many more BPF checks.
         #
-    elseif( EXISTS /usr/include/net/pfilt.h )
+    elseif(EXISTS /usr/include/net/pfilt.h)
         #
         # DEC OSF/1, Digital UNIX, Tru64 UNIX
         #
-	set( PCAP_TYPE pf )
-    elseif( EXISTS /dev/enet )
-        set( PCAP_TYPE enet )
-    elseif( EXISTS /dev/nit )
-        set( PCAP_TYPE snit )
-    elseif( EXISTS /usr/include/sys/net/nit.h )
-        set( PCAP_TYPE nit )
-    elseif( EXISTS /usr/include/linux/socket.h )
-        set( PCAP_TYPE linux )
-    elseif( EXISTS /usr/include/net/raw.h )
-        set( PCAP_TYPE snoop )
-    elseif( EXISTS /usr/include/odmi.h )
+	set(PCAP_TYPE pf)
+    elseif(EXISTS /dev/enet)
+        set(PCAP_TYPE enet)
+    elseif(EXISTS /dev/nit)
+        set(PCAP_TYPE snit)
+    elseif(EXISTS /usr/include/sys/net/nit.h)
+        set(PCAP_TYPE nit)
+    elseif(EXISTS /usr/include/linux/socket.h)
+        set(PCAP_TYPE linux)
+    elseif(EXISTS /usr/include/net/raw.h)
+        set(PCAP_TYPE snoop)
+    elseif(EXISTS /usr/include/odmi.h)
         #
         # On AIX, the BPF devices might not yet be present - they're
         # created the first time libpcap runs after booting.
         # We check for odmi.h instead.
         #
-        set( PCAP_TYPE bpf )
-    elseif( /usr/include/sys/dlpi.h )
-        set( PCAP_TYPE dlpi )
+        set(PCAP_TYPE bpf)
+    elseif(/usr/include/sys/dlpi.h)
+        set(PCAP_TYPE dlpi)
     else()
-	set( PCAP_TYPE null )
+	set(PCAP_TYPE null)
     endif()
-endif( WIN32 )
+endif(WIN32)
 message(STATUS "Packet capture mechanism type: ${PCAP_TYPE}")
 set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-${PCAP_TYPE}.c)
 
@@ -395,7 +395,7 @@ elseif(PCAP_TYPE STREQUAL "linux")
     #
     # Do we have the wireless extensions?
     #
-    check_include_file( linux/wireless.h HAVE_LINUX_WIRELESS_H )
+    check_include_file(linux/wireless.h HAVE_LINUX_WIRELESS_H)
 
     #
     # Do we have libnl?
@@ -478,7 +478,7 @@ endif()
 # if we support capturing.  Don't bother if we don't support
 # capturing.
 #
-if( NOT WIN32 )
+if(NOT WIN32)
     #
     # UN*X - figure out what type of interface list mechanism we
     # have.
@@ -488,21 +488,21 @@ if( NOT WIN32 )
         # We can't capture, so we can't open any capture
         # devices, so we won't return any interfaces.
         #
-        set( FINDALLDEVS_TYPE null )
+        set(FINDALLDEVS_TYPE null)
     else()
-        check_function_exists( getifaddrs HAVE_GETIFADDRS )
+        check_function_exists(getifaddrs HAVE_GETIFADDRS)
         if(HAVE_GETIFADDRS)
             #
             # We have "getifaddrs()"; make sure we have <ifaddrs.h>
             # as well, just in case some platform is really weird.
             #
-            check_include_file( ifaddrs.h HAVE_IFADDRS_H )
+            check_include_file(ifaddrs.h HAVE_IFADDRS_H)
             if(HAVE_IFADDRS_H)
                 #
                 # We have the header, so we use "getifaddrs()" to
                 # get the list of interfaces.
                 #
-                set( FINDALLDEVS_TYPE getad )
+                set(FINDALLDEVS_TYPE getad)
             else()
                 #
                 # We don't have the header - give up.
@@ -513,7 +513,7 @@ if( NOT WIN32 )
                 # but without "ifaddrs.h", if there is something
                 # we can do on those systems.
                 #
-                message(FATAL_ERROR "Your system has getifaddrs() but doesn't have a usable <ifaddrs.h>." )
+                message(FATAL_ERROR "Your system has getifaddrs() but doesn't have a usable <ifaddrs.h>.")
             endif()
         else()
             #
@@ -530,12 +530,12 @@ if( NOT WIN32 )
                 # or some older version of Solaris, with
                 # just SIOCGIFCONF.
                 #
-                try_compile( HAVE_SIOCGLIFCONF ${CMAKE_CURRENT_BINARY_DIR} "${pcap_SOURCE_DIR}/config/have_siocglifconf.c"  )
-                message( STATUS "HAVE_SIOCGLIFCONF = ${HAVE_SIOCGLIFCONF}" )
-                if( HAVE_SIOCGLIFCONF )
-                    set( FINDALLDEVS_TYPE glifc )
+                try_compile(HAVE_SIOCGLIFCONF ${CMAKE_CURRENT_BINARY_DIR} "${pcap_SOURCE_DIR}/config/have_siocglifconf.c" )
+                message(STATUS "HAVE_SIOCGLIFCONF = ${HAVE_SIOCGLIFCONF}")
+                if(HAVE_SIOCGLIFCONF)
+                    set(FINDALLDEVS_TYPE glifc)
                 else()
-                    set( FINDALLDEVS_TYPE gifc )
+                    set(FINDALLDEVS_TYPE gifc)
                 endif()
             else()
                 #
@@ -544,26 +544,26 @@ if( NOT WIN32 )
                 # another mechanism, and we should be using that
                 # instead.)
                 #
-                set( FINDALLDEVS_TYPE gifc )
+                set(FINDALLDEVS_TYPE gifc)
             endif()
         endif()
     endif()
     message(STATUS "Find-interfaces mechanism type: ${FINDALLDEVS_TYPE}")
-    set( PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} fad-${FINDALLDEVS_TYPE}.c )
+    set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} fad-${FINDALLDEVS_TYPE}.c)
 endif()
 
 file(GLOB PROJECT_SOURCE_LIST_CORE_H
     *.h
     pcap/*.h
 )
-set( PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${PROJECT_SOURCE_LIST_CORE_H} )
+set(PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${PROJECT_SOURCE_LIST_CORE_H})
 
-if( WIN32 )
+if(WIN32)
     file(GLOB PROJECT_SOURCE_LIST_WIN32_H
         Win32/Include/*.h
     )
-    set( PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${PROJECT_SOURCE_LIST_WIN32_H} )
-endif( WIN32 )
+    set(PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${PROJECT_SOURCE_LIST_WIN32_H})
+endif(WIN32)
 
 #
 # {Flex} and YACC/Berkeley YACC/Bison.
@@ -575,8 +575,8 @@ endif( WIN32 )
 # Try to find Flex, a Windows version of Flex, or Lex.
 #
 find_program(LEX_EXECUTABLE NAMES flex win_flex lex)
-if(LEX_EXECUTABLE STREQUAL "LEX_EXECUTABLE-NOTFOUND" )
-    message(FATAL_ERROR "Neither flex nor win_flex nor lex was found." )
+if(LEX_EXECUTABLE STREQUAL "LEX_EXECUTABLE-NOTFOUND")
+    message(FATAL_ERROR "Neither flex nor win_flex nor lex was found.")
 endif()
 message(STATUS "Lexical analyzer generator: ${LEX_EXECUTABLE}")
 
@@ -607,8 +607,8 @@ set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/scanner.c PROPERTIES
 # Try to find YACC or Bison.
 #
 find_program(YACC_EXECUTABLE NAMES bison win_bison byacc yacc)
-if(YACC_EXECUTABLE STREQUAL "YACC_EXECUTABLE-NOTFOUND" )
-    message(FATAL_ERROR "Neither bison nor win_bison nor byacc nor yacc was found." )
+if(YACC_EXECUTABLE STREQUAL "YACC_EXECUTABLE-NOTFOUND")
+    message(FATAL_ERROR "Neither bison nor win_bison nor byacc nor yacc was found.")
 endif()
 message(STATUS "Parser generator: ${YACC_EXECUTABLE}")
 
@@ -618,8 +618,8 @@ message(STATUS "Parser generator: ${YACC_EXECUTABLE}")
 # of the path (without a .exe extension, if this is Windows).
 #
 get_filename_component(YACC_NAME ${YACC_EXECUTABLE} NAME_WE)
-if( "${YACC_NAME}" STREQUAL "bison" OR "${YACC_NAME}" STREQUAL "win_bison" )
-    set( YACC_COMPATIBILITY_FLAG "-y" )
+if("${YACC_NAME}" STREQUAL "bison" OR "${YACC_NAME}" STREQUAL "win_bison")
+    set(YACC_COMPATIBILITY_FLAG "-y")
 endif()
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/grammar.c ${CMAKE_CURRENT_BINARY_DIR}/grammar.h
@@ -641,7 +641,7 @@ set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/grammar.c PROPERTIES
 #
 #set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${CMAKE_CURRENT_BINARY_DIR}/grammar.c)
 
-if( WIN32 )
+if(WIN32)
     #
     # CMake does not love Windows.
     #
@@ -655,7 +655,7 @@ if( WIN32 )
         COMMAND ${GenVersion_path} ${VERSION_path} ${version_h_in_path} ${version_h_path}
         DEPENDS ${pcap_SOURCE_DIR}/VERSION ${pcap_SOURCE_DIR}/pcap_version.h.in
     )
-else( WIN32 )
+else(WIN32)
     add_custom_command(
         OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/version.c
         SOURCE ${pcap_SOURCE_DIR}/VERSION
@@ -681,7 +681,7 @@ else( WIN32 )
     # Add version.c to the list of sources.
     #
     set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${CMAKE_CURRENT_BINARY_DIR}/version.c)
-endif( WIN32 )
+endif(WIN32)
 
 #
 # Since pcap_version.h does not exists yet when cmake is run, mark
@@ -742,12 +742,11 @@ target_link_libraries(${LIBRARY_NAME} ${PCAP_LINK_LIBRARIES})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmakeconfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
-
 ######################################
 # Install pcap library and include files
 ######################################
-install(TARGETS ${LIBRARY_NAME} DESTINATION lib )
-install(TARGETS ${LIBRARY_NAME}_static DESTINATION lib )
+install(TARGETS ${LIBRARY_NAME} DESTINATION lib)
+install(TARGETS ${LIBRARY_NAME}_static DESTINATION lib)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pcap/ DESTINATION include/pcap)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pcap.h DESTINATION include)
 
